fix(theme): [grid] fix tree node text overflow (#1661)

--- a/packages/theme/src/grid/table.less
+++ b/packages/theme/src/grid/table.less
@@ -833,6 +833,7 @@
           &__title:has(.tiny-grid-tree__indent:nth-last-child(2):first-child),
           &__ellipsis:has(.tiny-grid-tree__indent:nth-last-child(2):first-child) {
             display: inline-block;
+            max-width: 100%;
           }
         }
       }
